k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: renthub
  labels:
    name: renthub
    environment: production
